--- a/Esercitazione-2/package.json
+++ b/Esercitazione-2/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios": "react-native run-ios",
+    "android": "react-native run-ios",
+    "eject": "react-native eject",
     "test": "jest"
   },
   "dependencies": {
